# str-amp

./: .gitignore  CHANGELOG.md  LICENSE  PKGBUILD  README.md  pyproject.toml  stramp.desktop
stramp/: __init__.py  library.py  main.py  player.py  waybar.py
stramp/ui/: sidebar.py  styles.py  window.py
tools/: download_music.py
